# TentacleOS

./: .clang-format  .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CODING_STANDARDS.md  CONTRIBUTING.md  README.md  README.pt.md  update_license.py
firmware_c5/components/Applications/: CMakeLists.txt
firmware_c5/components/Applications/bluetooth/: android_spam.c  apple_juice_spam.c  ble_connect_flood.c  ble_hid_keyboard.c  ble_l2cap_flood.c  ble_scanner.c  ble_screen_server.c  ble_sniffer.c  ble_tracker.c  canned_spam.c  exposure_notification.c  gatt_explorer.c  oui_lookup.c  skimmer_detector.c  sour_apple_spam.c  swift_pair_spam.c  tracker_detector.c  tutti_frutti_spam.c  uuid_lookup.c
firmware_c5/components/Applications/espnow_chat/: espnow_chat.c
firmware_c5/components/Applications/wifi/: ap_scanner.c  beacon_spam.c  client_scanner.c  deauther_detector.c  evil_twin.c  port_scan.c  probe_monitor.c  signal_monitor.c  target_scanner.c  wifi_deauther.c  wifi_flood.c  wifi_sniffer.c
firmware_c5/components/Drivers/: CMakeLists.txt
firmware_c5/components/Drivers/bq25896/: bq25896.c
firmware_c5/components/Drivers/buttons_gpio/: buttons_gpio.c
firmware_c5/components/Drivers/led/: led_control.c
firmware_c5/components/Drivers/spi/: spi.c
firmware_c5/components/Drivers/spi_slave/: spi_slave_driver.c
firmware_c5/components/Service/: CMakeLists.txt
firmware_c5/components/Service/bluetooth/: README.md  bluetooth_service.c
firmware_c5/components/Service/console/: console_service.c
firmware_c5/components/Service/dns_server/: dns_server.c
firmware_c5/components/Service/esp_now/: service_esp_now.c
firmware_c5/components/Service/font/: font.c
firmware_c5/components/Service/http_server/: http_server_service.c
firmware_c5/components/Service/meshcore/: meshcore_gatt.c
firmware_c5/components/Service/meshtastic/: meshtastic_gatt.c  meshtastic_tcp.c
firmware_c5/components/Service/sd_card/: sd_card_dir.c  sd_card_file.c  sd_card_info.c  sd_card_init.c  sd_card_read.c  sd_card_write.c
firmware_c5/components/Service/spi_bridge/: README.md  bt_dispatcher.c  meshcore_transport.c  meshtastic_transport.c  session_manager.c  spi_bridge.c  wifi_dispatcher.c
firmware_c5/components/Service/storage_api/: storage_impl.c  storage_init.c  storage_mkdir.c  storage_read.c  storage_write.c
firmware_c5/components/Service/storage_assets/: storage_assets.c
firmware_c5/components/Service/storage_vfs/: vfs_auto.c  vfs_core.c  vfs_littlefs.c  vfs_sdcard.c
firmware_c5/components/Service/wifi/: README.md  mac_vendor.c  wifi_service.c
firmware_p4/components/Drivers/: CMakeLists.txt
firmware_p4/components/Drivers/bq25896/: bq25896.c
firmware_p4/components/Drivers/buttons_gpio/: buttons_gpio.c
firmware_p4/components/Drivers/cc1101/: README.md  cc1101.c
firmware_p4/components/Drivers/i2c_init/: i2c_init.c
firmware_p4/components/Drivers/led/: led_control.c
firmware_p4/components/Drivers/spi/: spi.c
firmware_p4/components/Drivers/spi_bridge_phy/: spi_bridge_phy.c
firmware_p4/components/Drivers/st25r3916/: st25r3916_aat.c  st25r3916_core.c  st25r3916_fifo.c  st25r3916_irq.c
firmware_p4/components/Drivers/st7789/: st7789.c
firmware_p4/components/Drivers/sx1262/: sx1262.c  sx1262_cmd.c  sx1262_fsm.c  sx1262_hal.c  sx1262_irq.c  sx1262_radio.c
firmware_p4/components/Drivers/tusb_desc/: README.md  tusb_desc.c
firmware_p4/components/Drivers/ys_rfid2/: ys_rfid2_core.c  ys_rfid2_parser.c
firmware_p4/components/Service/: CMakeLists.txt
firmware_p4/components/Service/bluetooth/: bluetooth_service.c
firmware_p4/components/Service/bridge_manager/: bridge_manager.c
firmware_p4/components/Service/c5_flasher/: c5_flasher.c
firmware_p4/components/Service/console/: console_service.c
firmware_p4/components/Service/font/: font.c
firmware_p4/components/Service/icons/: icons.c
firmware_p4/components/Service/ir/: ir.c  ir_file.c  ir_protocol.c  ir_protocol_denon.c  ir_protocol_jvc.c  ir_protocol_lg.c  ir_protocol_nec.c  ir_protocol_panasonic.c  ir_protocol_rc5.c  ir_protocol_rc6.c  ir_protocol_samsung.c  ir_protocol_sony.c
firmware_p4/components/Service/lvgl_port/: lv_port_disp.c  lv_port_indev.c
firmware_p4/components/Service/ota/: ota_service.c
firmware_p4/components/Service/sd_card/: README.md  sd_card_dir.c  sd_card_file.c  sd_card_info.c  sd_card_init.c  sd_card_read.c  sd_card_write.c
firmware_p4/components/Service/spi_bridge/: README.md  spi_bridge.c  spi_session.c
firmware_p4/components/Service/storage_api/: README.md  storage_impl.c  storage_init.c  storage_mkdir.c  storage_read.c  storage_stream.c  storage_write.c  tos_config.c  tos_first_boot.c  tos_log.c  tos_loot.c  tos_theme.c
firmware_p4/components/Service/storage_assets/: README.md  storage_assets.c
firmware_p4/components/Service/storage_vfs/: README.md  vfs_auto.c  vfs_core.c  vfs_littlefs.c  vfs_sdcard.c
firmware_p4/components/Service/usb_stream/: usb_stream.c
firmware_p4/components/Service/virtual_display_client/: virtual_display_client.c
firmware_p4/components/Service/wifi/: README.md  mac_vendor.c  wifi_service.c
tools/hle/: CMakeLists.txt  lv_conf.h
tools/hle/include/: esp_bt.h  esp_console.h  esp_err.h  esp_event.h  esp_heap_caps.h  esp_http_server.h  esp_lcd_panel_ops.h  esp_lcd_panel_vendor.h  esp_littlefs.h  esp_log.h  esp_mac.h  esp_netif.h  esp_now.h  esp_ota_ops.h  esp_partition.h  esp_random.h  esp_rom_sys.h  esp_system.h  esp_timer.h  esp_vfs_fat.h  esp_wifi.h  esp_wifi_types.h  ff.h  led_strip.h  lv_conf.h  mdns.h  nvs.h  nvs_flash.h  sdmmc_cmd.h  tinyusb.h
tools/hle/include/argtable3/: argtable3.h
tools/hle/include/driver/: gpio.h  i2c.h  ledc.h  rmt.h  rmt_encoder.h  rmt_rx.h  rmt_types.h  sdmmc_defs.h  sdspi_host.h  spi_common.h  spi_master.h  spi_slave.h  uart.h
tools/hle/include/freertos/: FreeRTOS.h  FreeRTOSConfig.h  event_groups.h  portmacro.h  queue.h  semphr.h  task.h  timers.h
tools/hle/src/: esp_shim.cpp  main.cpp
tools/hle/tests/: test_cc1101.cpp  test_dummy.cpp  test_e2e_bridge.cpp  test_spi_bridge_channel.cpp
(+684 files in other folders)
